# fbem

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: PROTOCOL.md
extension/: README.md  background.js  content.js  injected.js  manifest.json
fbem/: __init__.py
fbem/bridge/: __init__.py  __main__.py  bridge_client.py  capture_store.py  config.py  run.py  server.py  ws_server.py
fbem/mcp/: __init__.py  __main__.py  bridge_api.py  registry.py  server.py
fbem/mcp/tools/: __init__.py  _template.py  capture_status.py  get_identity.py  health.py  post_photos.py  post_reel.py  switch_profile.py
