[project]
name = "fbem"
version = "0.1.0"
description = "Facebook Extension Crawler + MCP — crawl/snapshot Facebook's native composer web API and publish Reels/Photos via a Chrome extension, exposed as MCP tools for any agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ISEMI" }]
keywords = ["facebook", "mcp", "model-context-protocol", "automation", "reels", "chrome-extension"]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.32,<0.40",
    "websockets>=13,<16",
    "httpx>=0.27,<0.29",
    "pydantic>=2.7,<3",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
fbem-bridge = "fbem.bridge.run:main"
fbem-mcp = "fbem.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fbem"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
